--- a/WebApp/Pages/UserForm.razor
+++ b/WebApp/Pages/UserForm.razor
@@ -1,4 +1,5 @@
 @page "/user-form"
+@using System.ComponentModel.DataAnnotations
 @using System.Net.Http
 @using System.Net.Http.Json
 @using System.Threading.Tasks
